# mcp-schrodinger

./: CHANGELOG.md  README.md  pyproject.toml
src/mcp_schrodinger/: __init__.py  __main__.py  server.py
