[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-schrodinger"
version = "0.1.0"
description = "Security PoC: MCP server that demonstrates prompt injection risks in the MCP ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dani", email = "cr0hn@cr0hn.com" },
]
keywords = ["mcp", "security", "prompt-injection", "poc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-schrodinger = "mcp_schrodinger:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_schrodinger"]
